--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "webpack -w -c ./.config/webpack/webpack.config.ts --env development",
     "e2e": "yarn exec cypress install && yarn exec grafana-e2e run",
     "e2e:update": "yarn exec cypress install && yarn exec grafana-e2e run --update-screenshots",
-    "lint": "eslint --cache --ignore-path ./.gitignore --ext .js,.jsx,.ts,.tsx .",
+    "lint": "eslint --cache --ignore-pattern ./.gitignore --ext .js,.jsx,.ts,.tsx .",
     "lint:fix": "yarn run lint --fix",
     "server": "docker-compose up --build",
     "sign": "npx --yes @grafana/sign-plugin@latest",
@@ -23,59 +23,60 @@
     "email": "khturner2@es.net"
   },
   "dependencies": {
-    "@emotion/css": "^11.1.3",
-    "@grafana/data": "8.0.6",
-    "@grafana/runtime": "9.3.8",
-    "@grafana/ui": "8.0.6",
-    "d3": ">=7.0.0 <8.0.0",
+    "@emotion/css": "^11.13.5",
+    "@grafana/data": "12.0.2",
+    "@grafana/runtime": "12.0.2",
+    "@grafana/ui": "12.0.2",
+    "d3": "^7.9.0",
     "d3-sankey": "0.12.3",
     "grafana-plugin-support": "latest",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "tslib": "2.5.0"
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "tslib": "2.8.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.7",
-    "@grafana/e2e": "9.3.8",
-    "@grafana/e2e-selectors": "9.3.8",
-    "@grafana/eslint-config": "^5.1.0",
-    "@grafana/tsconfig": "^1.2.0-rc1",
-    "@swc/core": "^1.3.51",
-    "@swc/helpers": "^0.5.0",
-    "@swc/jest": "^0.2.23",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
-    "@types/d3": "7.0.0",
-    "@types/d3-sankey": "0.11.2",
-    "@types/jest": "^29.2.2",
-    "@types/lodash": "^4.14.188",
-    "@types/node": "^18.11.9",
-    "@types/react": "17.0.42",
-    "@types/react-dom": "17.0.14",
-    "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.7.1",
+    "@babel/core": "^7.28.0",
+    "@grafana/e2e": "10.4.12",
+    "@grafana/e2e-selectors": "12.0.2",
+    "@grafana/eslint-config": "^8.1.0",
+    "@grafana/tsconfig": "^2.0.0",
+    "@swc/core": "^1.12.9",
+    "@swc/helpers": "^0.5.17",
+    "@swc/jest": "^0.2.38",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@types/d3": "7.4.3",
+    "@types/d3-sankey": "0.12.4",
+    "@types/jest": "^30.0.0",
+    "@types/lodash": "^4.17.20",
+    "@types/node": "^24.0.10",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
+    "copy-webpack-plugin": "^13.0.0",
+    "css-loader": "^7.1.2",
     "emotion": "11.0.0",
-    "eslint-webpack-plugin": "^3.1.1",
-    "fork-ts-checker-webpack-plugin": "^7.2.0",
-    "glob": "^10.0.0",
+    "eslint": "^9.30.1",
+    "eslint-webpack-plugin": "^5.0.2",
+    "fork-ts-checker-webpack-plugin": "^9.1.0",
+    "glob": "^11.0.3",
     "identity-obj-proxy": "3.0.0",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
-    "prettier": "^2.5.0",
+    "jest": "^30.0.4",
+    "jest-environment-jsdom": "^30.0.4",
+    "prettier": "^3.6.2",
     "replace-in-file-webpack-plugin": "^1.0.6",
-    "sass": "1.56.1",
-    "sass-loader": "13.2.0",
-    "style-loader": "3.3.1",
-    "swc-loader": "^0.2.3",
-    "ts-node": "^10.5.0",
-    "tsconfig-paths": "^4.1.0",
-    "typescript": "^4.4.0",
-    "webpack": "^5.69.1",
-    "webpack-cli": "^4.9.2",
+    "sass": "1.89.2",
+    "sass-loader": "16.0.5",
+    "style-loader": "4.0.0",
+    "swc-loader": "^0.2.6",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.8.3",
+    "webpack": "^5.99.9",
+    "webpack-cli": "^6.0.1",
     "webpack-livereload-plugin": "^3.0.2"
   },
   "engines": {
     "node": ">=14"
   },
-  "packageManager": "yarn@1.22.10"
+  "packageManager": "yarn@1.22.22"
 }
